--- a/education.html
+++ b/education.html
@@ -22,7 +22,7 @@
 <table align="center" cellspacing="40">
 <tr>
 <td align="center">
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\saintfrancis.jpg" width="35%" height="40%"  class="center">
+<img src="IMAGES\saintfrancis.jpg" width="35%" height="40%"  class="center">
 <br/><br/>
 <font face="Lato" size="4" color="#ffff">
 <h2> SEKOLAH KEBANGSAAN SAINT FRANCIS (2006-2012) </h2>
@@ -37,7 +37,7 @@
 <br>
 <tr>
 <td align="center">
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\acs.jpg" width="40%" height="40%" class="center">
+<img src="IMAGES\acs.jpg" width="40%" height="40%" class="center">
 <br/><br/>
 <font face="Lato" size="4" color="#ffff">
 <h2> SEKOLAH KEBANGSAAN SAINT FRANCIS (2013-2017) </h2>
@@ -49,7 +49,7 @@
 </tr>
 <tr>
 <td align="center">
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\uitmkedah.jpg" width="40%" height="40%" class="center">
+<img src=IMAGES\uitmkedah.jpg" width="40%" height="40%" class="center">
 <br/><br/>
 <font face="Lato" size="4" color="#ffff">
 <h2> UNIVERSITI TECKNOLOGI MARA (2020-2022) </h2>
