--- a/experience.html
+++ b/experience.html
@@ -17,7 +17,7 @@
 <table align="center" cellspacing="40">
 <tr>
 <td align="center">
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\tgv.jpeg" width="35%" height="40%" class="center">
+<img src="IMAGES\tgv.jpeg" width="35%" height="40%" class="center">
 <br/><br/>
 <font face="Lato" size="4" color="#ffff">
 <h2> TANJONG GOLDEN VILLAGE CINEMA (TGV) (2017-2019) </h2>
@@ -32,7 +32,7 @@
 <br>
 <tr>
 <td align="center">
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\pizza.jpeg" width="40%" height="40%" class="center">
+<img src="IMAGES\pizza.jpeg" width="40%" height="40%" class="center">
 <br/><br/>
 <font face="Lato" size="4" color="#ffff">
 <h2> PIZZA HUT (2019-2019) </h2>
@@ -44,7 +44,7 @@
 </tr>
 <tr>
 <td align="center">
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\grabfood.jpeg" width="40%" height="40%" class="center">
+<img src="IMAGES\grabfood.jpeg" width="40%" height="40%" class="center">
 <br/><br/>
 <font face="Lato" size="4" color="#ffff">
 <h2> GRAB FOODRIDER(2020-2022) </h2>
