--- a/family.html
+++ b/family.html
@@ -15,7 +15,7 @@
 <br>
 <H1 align="center"><font face="arial" color="#FFFF">My Big Family</H1>
 <center>
-<IMG SRC="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\familybig.jpg" width="40%" height="50%" border="5"
+<IMG SRC="IMAGES\familybig.jpg" width="40%" height="50%" border="5"
 hspace="2" vspace="2"></tr>
 <br>
 <table border="1" style="border: 10px; border:white; border-collapse: separate; padding: 10px; border-spacing: 20px; width: 700;">
@@ -51,10 +51,5 @@ hspace="2" vspace="2"></tr>
 <th width = "200" style="background-color: white; font-size:15px;font-family:arial">Brother Right</th>
 <th width = "450" style="background-color: white; font-size:15px;font-family:arial" font color ="#FFFFF">Danish Azhar Bin Khairil Azhar</th>
 </tr>
-
-
-
-
-
 </body>
 </html>
