--- a/hobby.html
+++ b/hobby.html
@@ -22,11 +22,11 @@ hspace="2" vspace="2"></marquee>
 During my free time i always on my laptop and play rpg game such as Elden Ring,Bloodborne and sekiro.Both game teach me to not give up and always try until you suceed in reaching your goals
 <br>
 <br>
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\eldenring.jpeg" width="20%" height="50%" border="3"
+<img src="IMAGES\eldenring.jpeg" width="20%" height="50%" border="3"
 hspace="2" vspace="2">
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\bloodborne.jpeg" width="20%" height="50%" border="3"
+<img src="IMAGES\bloodborne.jpeg" width="20%" height="50%" border="3"
 hspace="2" vspace="2">
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\sekiro.jpeg" width="20%" height="50%" border="3"
+<img src="IMAGES\sekiro.jpeg" width="20%" height="50%" border="3"
 hspace="2" vspace="2">
 <br>
 <br>
@@ -41,11 +41,11 @@ hspace="2" vspace="2"></marquee>
 Anime is a part of my life. I've been watching anime since i was a kid. It help me a lot with my traumas and i enjoy watching it everyday, My top 3 anime is Gurren laggan,Jojo Bizarre Adventure and Attack On Titan.
 <br>
 <br>
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\gurrenlaggan.png" width="20%" height="40%" border="3"
+<img src="IMAGES\gurrenlaggan.png" width="20%" height="40%" border="3"
 hspace="2" vspace="2"> 
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\jojo.jpeg" width="20%" height="40%" border="3"
+<img src="IMAGES\jojo.jpeg" width="20%" height="40%" border="3"
 hspace="2" vspace="2"> 
-<img src="C:\Users\Win10\OneDrive\Desktop\CODING INDIVIDUAL\IMAGES\titan.jpeg" width="20%" height="40%" border="3"
+<img src="IMAGES\titan.jpeg" width="20%" height="40%" border="3"
 hspace="2" vspace="2"> 
 </body>
 </html>
