--- a/education.html
+++ b/education.html
@@ -49,7 +49,7 @@
 </tr>
 <tr>
 <td align="center">
-<img src=IMAGES\uitmkedah.jpg" width="40%" height="40%" class="center">
+<img src="IMAGES\uitmkedah.jpg" width="40%" height="40%" class="center">
 <br/><br/>
 <font face="Lato" size="4" color="#ffff">
 <h2> UNIVERSITI TECKNOLOGI MARA (2020-2022) </h2>
